--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1,1 +1,13 @@
-.foto1 { padding: 10px; margin: 10px; border: 2px solid black; float: right; width: 250px; }
+body {
+  background-color: powderblue;
+}
+h1 {
+  color: blue;
+}
+p {
+  color: red;
+}
+
+h2{
+  font-family: sans-serif;
+}
